# aplus_web

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  about.html  contact_us.html  index.html  package-lock.json  package.json  pricing.html  render.yaml  services.html  vite.config.js
assets/javascript/: config.js  main.js
assets/stylesheet/: pricing.css
public/assets/stylesheet/: about.css  contact_us.css
src/: main.js  main.rs
src/stylesheet/: services.css  style.css
static/: index.html  services.html
static/assets/javascript/: main.js
static/assets/stylesheet/: services.css  style.css
templates/: booking_email.html
