[package]
name = "aplus_website"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
env_logger = "0.11" 